--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
   ],
   "plugins": ["jest", "react", "react-hooks", "prettier", "jsx-a11y"],
   "env": {
-    "browser": true
+    "browser": true,
+    "jest": true
   },
   "rules": {
     "prefer-promise-reject-errors": ["off"],
