--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --verbose --coverage",
+    "test:watch": "jest --watch"
   },
   "contributors": [
     "Tyler Negro"
@@ -14,8 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^2.25.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
+   
     "apollo-server-micro": "^2.25.2",
     "dataloader": "^2.0.0",
     "graphql": "^15.5.1",
@@ -27,6 +28,9 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "babel-jest": "^27.0.6",
     "eslint": "^7.29.0",
     "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
