somewhat of a working webpack approach

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ _SpecRunner.html
 __benchmarks__
 build/
 build2/
+.build
 remote-repo/
 coverage/
 .module-cache
@@ -19,7 +20,7 @@ fixtures/dom/public/react-dom.js
 fixtures/dom/public/react.js
 test/the-files-to-test.generated.js
 *.log*
-chrome-user-data 
+chrome-user-data
 *.iml
 .vscode
 *.swp
