--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.1.0",
   "description": "",
   "scripts": {
-    "build:client": "NODE_ENV=production webpack --config config/webpack.config.client.babel.js --mode production",
-    "build:server": "NODE_ENV=production webpack --config config/webpack.config.server.babel.js --mode production",
-    "start": "NODE_ENV=development TZ=UTC npm-run-all --parallel start:client start:server",
-    "start:client": "webpack-dev-server -r dotenv/config --config config/webpack.config.client.babel.js --mode development",
-    "start:server": "webpack -r dotenv/config --config config/webpack.config.server.babel.js --mode development"
+    "start": "",
+    "dev": "NODE_ENV=development TZ=UTC npm-run-all --parallel start:client start:server",
+    "build": "NODE_ENV=production webpack --config config/webpack.config.client.js --mode production",
+    "start:server": "NODE_ENV=development webpack --config config/webpack.config.server.babel.js --mode development --hot",
+    "start:client": "NODE_ENV=development webpack serve  --config config/webpack.config.client.babel.js --mode development"
   },
   "contributors": [
     "Tyler Negro"
@@ -37,13 +37,17 @@
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
     "@babel/node": "^7.14.7",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "@babel/register": "^7.14.5",
+    "@webpack-cli/serve": "^1.5.1",
     "babel-jest": "^27.0.6",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "dotenv": "^10.0.0",
+    "dotenv-webpack": "^7.0.3",
     "eslint": "^7.29.0",
     "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
@@ -55,15 +59,14 @@
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.0.6",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.2",
     "prisma": "^2.25.0",
+    "razzle-start-server-webpack-plugin": "^4.0.5",
     "react-hot-loader": "^4.13.0",
     "source-map-loader": "^1.1.1",
-    "start-server-webpack-plugin": "^2.2.5",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^5.44.0",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
     "webpack-node-externals": "^2.5.2",
     "webpack-s3-plugin": "^1.2.0-rc.0"
