--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,13 @@
 {
+  "plugins": [
+    "react-hot-loader/babel",
+    ["babel-plugin-styled-components", { "fileName": false }],
+    "@babel/syntax-dynamic-import",
+    "@babel/plugin-proposal-class-properties",
+    ["@babel/plugin-proposal-object-rest-spread", { "loose": true, "useBuiltIns": true }],
+    "@babel/plugin-transform-runtime"
+  ],
+
   "presets": [
     "@babel/preset-env", "@babel/react"
   ]
