--- a/snowslide/package.json
+++ b/snowslide/package.json
@@ -7,12 +7,16 @@
     "test": "echo cd ../",
     "dev": "clear && concurrently -c \"bgMagenta,bgBlue\" \"npm:server\" \"npm:client\"",
     "server": "cd ../server && npm run-script dev",
-    "client": "wait-on http://localhost:3001 && cd ../client && npm run-script dev"
+    "client": "wait-on http://localhost:3001 && cd ../client && npm run-script dev",
+    "client:only": "cd ../client && npm run-script dev"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.3.0",
     "wait-on": "^6.0.0"
+  },
+  "dependencies": {
+    "inquirer": "^8.1.2"
   }
 }
