--- a/server/package.json
+++ b/server/package.json
@@ -21,10 +21,25 @@
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-prettier": "^3.4.0",
     "nodemon": "^2.0.12",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "prisma": "^2.27.0"
   },
   "dependencies": {
+    "@graphql-tools/delegate": "^7.1.5",
+    "@graphql-tools/load-files": "^6.3.2",
+    "@graphql-tools/merge": "^6.2.14",
+    "@graphql-tools/schema": "^7.1.5",
+    "@graphql-tools/stitch": "^7.5.3",
+    "@graphql-tools/wrap": "^7.0.8",
+    "@prisma/client": "^2.27.0",
+    "apollo-server-express": "^3.0.2",
+    "chalk": "^4.1.1",
+    "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "graphql": "^15.5.1",
+    "graphql-depth-limit": "^1.1.0",
+    "graphql-modules": "^1.4.4",
+    "graphql-scalars": "^1.10.0"
   }
 }
