add user to prisma schema

--- a/server/package.json
+++ b/server/package.json
@@ -33,10 +33,14 @@
     "@graphql-tools/wrap": "^7.0.8",
     "@prisma/client": "^2.27.0",
     "apollo-server-express": "^3.0.2",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "chalk": "^4.1.1",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
     "graphql": "^15.5.1",
     "graphql-depth-limit": "^1.1.0",
     "graphql-modules": "^1.4.4",
