--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,10 @@
     "start": "nodemon --watch scripts",
     "dev": "nodemon -x \"npm run buildrun\"  --ignore dist",
     "buildrun": "npm run build:dev && npm run start:server",
-    "build:dev": "rm -rf dist && node ./scripts/build.js",
+    "build:dev": "rm -rf dist && node ./scripts/build.js && npx tsc --noEmit",
     "start:server": "nodemon ./dist/index.js --delay 500ms",
     "prisma:migrate": "npx prisma migrate dev",
-    "prisma:generate": "npx prisma generate" 
+    "prisma:generate": "npx prisma generate"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,14 @@
     "schema": "src/prisma/schema.prisma"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
+    "@types/express-jwt": "^6.0.2",
+    "@types/graphql-depth-limit": "^1.1.2",
+    "@types/http-errors": "^1.8.1",
+    "@types/jsonwebtoken": "^8.5.4",
+    "@types/node": "^16.4.12",
+    "@types/node-fetch": "^2.5.12",
     "esbuild": "^0.12.15",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
@@ -27,7 +35,9 @@
     "eslint-plugin-prettier": "^3.4.0",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
-    "prisma": "^2.27.0"
+    "prisma": "^2.27.0",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "@graphql-tools/delegate": "^7.1.5",
@@ -41,6 +51,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.1",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
@@ -49,6 +60,9 @@
     "graphql": "^15.5.1",
     "graphql-depth-limit": "^1.1.0",
     "graphql-modules": "^1.4.4",
-    "graphql-scalars": "^1.10.0"
+    "graphql-scalars": "^1.10.0",
+    "http-errors": "^1.8.0",
+    "jsonwebtoken": "^8.5.1",
+    "node-fetch": "^2.6.1"
   }
 }
