--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
+    "test:watch":"npm run test -- --watch",
     "start": "nodemon --watch scripts",
     "dev": "nodemon -x \"npm run buildrun\"  --ignore dist",
     "buildrun": "npm run build:dev && npm run start:server",
@@ -24,15 +25,18 @@
     "@types/express-jwt": "^6.0.2",
     "@types/graphql-depth-limit": "^1.1.2",
     "@types/http-errors": "^1.8.1",
+    "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/node": "^16.4.12",
     "@types/node-fetch": "^2.5.12",
     "esbuild": "^0.12.15",
+    "esbuild-jest": "^0.5.0",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
     "prisma": "^2.27.0",
