--- a/server/package.json
+++ b/server/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage",
-    "test:watch":"npm run test -- --watch",
+    "test:watch": "npm run test -- --watch",
     "start": "nodemon --watch scripts",
     "dev": "nodemon -x \"npm run buildrun\"  --ignore dist",
     "buildrun": "npm run build:dev && npm run start:server",
     "build:dev": "rm -rf dist && node ./scripts/build.js && npx tsc --noEmit",
-    "start:server": "nodemon ./dist/index.js --delay 500ms",
+    "start:server": "nodemon ./dist/index.js --delay 800ms",
     "prisma:migrate": "npx prisma migrate dev",
     "prisma:generate": "npx prisma generate"
   },
@@ -63,8 +63,10 @@
     "express-jwt": "^6.0.0",
     "graphql": "^15.5.1",
     "graphql-depth-limit": "^1.1.0",
+    "graphql-middleware": "^6.0.10",
     "graphql-modules": "^1.4.4",
     "graphql-scalars": "^1.10.0",
+    "graphql-shield": "^7.5.0",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.1"
