--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -1,17 +1,21 @@
 {
   "extends": [
     "plugin:prettier/recommended",
-    "prettier"
+    "prettier",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
-  "plugins": ["prettier"],
+  "plugins": ["prettier", "@typescript-eslint"],
   "env": {
     "jest": true
   },
   "rules": {
     "prefer-promise-reject-errors": ["off"],
     "prettier/prettier": ["error"],
-    "no-unused-expressions": 0
-
+    "no-unused-expressions": 0,
+    // typescript rules
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off"
   },
   "settings": {
 
