--- a/server/package.json
+++ b/server/package.json
@@ -27,8 +27,10 @@
     "@types/jsonwebtoken": "^8.5.4",
     "@types/node": "^16.4.12",
     "@types/node-fetch": "^2.5.12",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
     "esbuild": "^0.12.15",
-    "eslint": "^7.31.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-jest": "^24.3.6",
