add a way to load in name data to db

--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -15,7 +15,8 @@
     "no-unused-expressions": 0,
     // typescript rules
     "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/explicit-module-boundary-types": "off"
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/ban-ts-comment": "warn"
   },
   "settings": {
 
