--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "build:dev": "rm -rf dist && node ./scripts/build.js && npx tsc --noEmit",
     "start:server": "nodemon ./dist/index.js --delay 800ms",
     "prisma:migrate": "npx prisma migrate dev",
-    "prisma:generate": "npx prisma generate"
+    "prisma:generate": "npx prisma generate",
+    "prisma:migrate:reset": "npx prisma migrate reset"
   },
   "author": "",
   "license": "ISC",
@@ -32,8 +33,8 @@
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
     "esbuild": "^0.12.15",
-    "eslint": "^7.32.0",
     "esbuild-jest": "^0.5.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-jest": "^24.3.6",
@@ -41,7 +42,7 @@
     "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
-    "prisma": "^2.27.0",
+    "prisma": "^2.29.0",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
@@ -52,7 +53,7 @@
     "@graphql-tools/schema": "^7.1.5",
     "@graphql-tools/stitch": "^7.5.3",
     "@graphql-tools/wrap": "^7.0.8",
-    "@prisma/client": "^2.27.0",
+    "@prisma/client": "^2.29.0",
     "apollo-server-express": "^3.0.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
@@ -71,6 +72,7 @@
     "graphql-shield": "^7.5.0",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "uuid": "^8.3.2"
   }
 }
