--- a/client/package.json
+++ b/client/package.json
@@ -1,15 +1,19 @@
 {
   "scripts": {
-    "dev": "snowpack dev",
-    "build": "snowpack build",
+    "dev": "vite",
+    "build": "vite build",
     "test": "web-test-runner \"src/**/*.test.tsx\"",
+    "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.3.3"
+    "@vitejs/plugin-react": "^1.3.1",
+    "axios": "^0.26.1",
+    "firebase": "^9.6.11",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "vite": "^2.9.5"
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.1.0",
@@ -18,7 +22,7 @@
     "@snowpack/web-test-runner-plugin": "^0.2.2",
     "@testing-library/react": "^11.2.6",
     "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.10",
+    "@types/node": "^17.0.25",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "@types/snowpack-env": "^2.3.3",
@@ -34,5 +38,6 @@
     "prettier": "^2.2.1",
     "snowpack": "^3.8.8",
     "typescript": "^4.2.4"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
