--- a/server/package.json
+++ b/server/package.json
@@ -44,6 +44,7 @@
     "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
+    "prettier-plugin-prisma": "^3.12.0",
     "prisma": "^3.6.0",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
@@ -57,7 +58,6 @@
     "@graphql-tools/wrap": "^7.0.8",
     "@prisma/client": "^3.6.0",
     "apollo-server-express": "^3.3.0",
-    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.1",
     "cookie-parser": "^1.4.5",
@@ -66,6 +66,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "firebase-admin": "^10.0.2",
     "graphql": "^15.6.0",
     "graphql-depth-limit": "^1.1.0",
     "graphql-middleware": "^6.0.9",
