--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -27,7 +27,7 @@
     /* Strict Type-Checking Options */
     "strict": false /* Enable all strict type-checking options. */,
     // "strict": true,                                 /* Enable all strict type-checking options. */
-    "noImplicitAny": false /* Raise error on expressions and declarations with an implied 'any' type. */,
+    "noImplicitAny": true /* Raise error on expressions and declarations with an implied 'any' type. */,
     // "noImplicitAny": true,                       /* Raise error on expressions and declarations with an implied 'any' type. */
     "strictNullChecks": false /* Enable strict null checks. */,
     // "strictFunctionTypes": true,                 /* Enable strict checking of function types. */
