--- a/client/package.json
+++ b/client/package.json
@@ -1,16 +1,18 @@
 {
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --mode production",
     "test": "web-test-runner \"src/**/*.test.tsx\"",
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "@apollo/client": "^3.6.1",
     "@vitejs/plugin-react": "^1.3.1",
     "axios": "^0.26.1",
     "firebase": "^9.6.11",
+    "graphql": "^16.4.0",
     "js-cookie": "^3.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
