--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+  "main": "dist/index",
   "scripts": {
     "dev": "vite",
     "build": "vite build --mode production",
@@ -14,8 +15,9 @@
     "firebase": "^9.6.11",
     "graphql": "^16.4.0",
     "js-cookie": "^3.0.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-firebase-hooks": "^5.0.3",
     "vite": "^2.9.5"
   },
   "devDependencies": {
@@ -27,8 +29,8 @@
     "@types/jest": "^27.4.0",
     "@types/js-cookie": "^3.0.2",
     "@types/node": "^17.0.25",
-    "@types/react": "^17.0.4",
-    "@types/react-dom": "^17.0.3",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.3",
     "@types/snowpack-env": "^2.3.3",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
