--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-router-dom": "^6.3.0",
     "vite": "^2.9.5"
   },
   "devDependencies": {
