--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --mode production",
-    "test": "web-test-runner \"src/**/*.test.tsx\"",
+    "test": "jest",
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
@@ -12,39 +12,47 @@
     "@apollo/client": "^3.6.1",
     "@vitejs/plugin-react": "^1.3.1",
     "axios": "^0.26.1",
-    "firebase": "^9.6.11",
+    "enhanced-resolve": "^5.9.3",
+    "firebase": "^9.8.1",
     "graphql": "^16.4.0",
     "js-cookie": "^3.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "vite": "^2.9.5"
   },
   "devDependencies": {
-    "@snowpack/plugin-dotenv": "^2.1.0",
-    "@snowpack/plugin-react-refresh": "^2.5.0",
-    "@snowpack/plugin-typescript": "^1.2.1",
-    "@snowpack/web-test-runner-plugin": "^0.2.2",
-    "@testing-library/react": "^11.2.6",
-    "@types/jest": "^27.4.0",
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@testing-library/dom": "^8.13.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.1.1",
+    "@types/jest": "^27.5.0",
     "@types/js-cookie": "^3.0.2",
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
-    "@types/snowpack-env": "^2.3.3",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "@web/test-runner": "^0.13.3",
+    "babel-jest": "^28.1.0",
     "eslint": "^8.14.0",
     "eslint-plugin-jest": "^25.7.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
-    "jest": "^27.4.7",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "npm": "^8.3.2",
     "prettier": "^2.6.2",
-    "snowpack": "^3.8.8",
-    "typescript": "^4.2.4"
+    "ts-jest": "^28.0.2",
+    "typescript": "^4.6.4"
   },
   "proxy": "http://localhost:3001"
 }
