--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -11,7 +11,8 @@
     /* Additional Options */
     "strict": true,
     "skipLibCheck": true,
-    "types": ["jest", "snowpack-env", "node"],
+    "esModuleInterop": true,
+    "types": ["jest", "node"],
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
