feat(chakra): add chakra ui library

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,3 +5,4 @@ vscode:
     - esbenp.prettier-vscode
     - dbaeumer.vscode-eslint
     - graphql.vscode-graphql
+    - components.vscode-styled-components
