--- a/client/package.json
+++ b/client/package.json
@@ -5,22 +5,30 @@
     "build": "vite build --mode production",
     "test": "jest",
     "preview": "vite preview",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
-    "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
     "@apollo/client": "^3.6.1",
+    "@chakra-ui/react": "^2.0.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@vitejs/plugin-react": "^1.3.1",
     "axios": "^0.26.1",
     "enhanced-resolve": "^5.9.3",
     "firebase": "^9.8.1",
+    "framer-motion": "^6.3.3",
     "graphql": "^16.4.0",
     "js-cookie": "^3.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.31.1",
+    "react-icons": "^4.3.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
+    "styled-components": "^5.3.5",
     "vite": "^2.9.5"
   },
   "devDependencies": {
@@ -37,6 +45,7 @@
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
+    "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
@@ -44,6 +53,7 @@
     "babel-jest": "^28.1.0",
     "eslint": "^8.14.0",
     "eslint-plugin-jest": "^25.7.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
     "identity-obj-proxy": "^3.0.0",
